docs/0.17/_sources/api/gammapy.modeling.models.ConstantTemporalModel.rst.txt
ConstantTemporalModel
=====================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: ConstantTemporalModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~ConstantTemporalModel.covariance
      ~ConstantTemporalModel.default_parameters
      ~ConstantTemporalModel.parameters
      ~ConstantTemporalModel.tag

   .. rubric:: Methods Summary

   .. autosummary::

      ~ConstantTemporalModel.__call__
      ~ConstantTemporalModel.copy
      ~ConstantTemporalModel.create
      ~ConstantTemporalModel.evaluate
      ~ConstantTemporalModel.from_dict
      ~ConstantTemporalModel.from_parameters
      ~ConstantTemporalModel.integral
      ~ConstantTemporalModel.sample_time
      ~ConstantTemporalModel.time_sum
      ~ConstantTemporalModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: parameters
   .. autoattribute:: tag

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: evaluate
   .. automethod:: from_dict
   .. automethod:: from_parameters
   .. automethod:: integral
   .. automethod:: sample_time
   .. automethod:: time_sum
   .. automethod:: to_dict
